--- a/templates/front/footer/view.html.twig
+++ b/templates/front/footer/view.html.twig
@@ -1,9 +1,14 @@
-<div class="col bg-dark {{ textColor}} text-center p-4">
+<div class="col bg-dark {{ textColor }} text-center p-4">
     <div class="card-body">
         <h5 class="{{ textColor }}">
             <i class="fas {{ icon }}"></i>
             {{ title }}
         </h5>
         <p class="card-text">{{ text }}</p>
+        {% if links is defined %}
+            {% for link in links %}
+                <a href="{{ link.url }}">{{ link.name }}</a>
+            {% endfor %}
+        {% endif %}
     </div>
 </div>
