--- a/templates/front/homepage/view.html.twig
+++ b/templates/front/homepage/view.html.twig
@@ -5,18 +5,11 @@
     <hr>
 
     <div class="row">
-        {% for i in 1..3 %}
-        <div class="col">
-            <div class="card">
-                <img src="https://picsum.photos/400/400" alt="Product picture" class="img-fluid">
-                <div class="card-body">
-                    <h4 class="card-title">Title</h4>
-                    <p class="card-text">Text</p>
-                    <a href="#" class="btn btn-primary">Add</a>
-                    <a href="" class="btn btn-success">See more</a>
-                </div>
-            </div>
-        </div>
+        {% for p in products %}
+            {% include('front/product/product_card.html.twig') with {
+                'level' : 'small',
+                'title' : 'h5',
+            } %}
         {% endfor %}
     </div>
     <hr>
