--- a/templates/admin/category/create.html.twig
+++ b/templates/admin/category/create.html.twig
@@ -4,21 +4,29 @@
 
 {% block main %}
 
-    <h1>New Category</h1>
 
-    {{ form_start(formView) }}
 
-    {{ form_errors(formView) }}
+    <div class="card rounded-3">
+        <div class="card-header fs-3">
+            New Category
+        </div>
 
-    <div class="row">
-        <div class="col-8">
-            {{ form_row(formView.name) }}
-            {{ form_row(formView.slug) }}
+        <div class="card-body">
+        {{ form_start(formView) }}
+
+        {{ form_errors(formView) }}
+
+        <div class="row">
+            <div class="col-lg-8">
+                {{ form_row(formView.name) }}
+                {{ form_row(formView.shortDescription) }}
+            </div>
+        </div>
+
+        <button class="btn btn-dark rounded-1" type="submit"><i class="fas fa-save"></i>&nbsp;&nbsp;Create</button>
+
+        {{ form_end(formView) }}
+        {# TODO Display products example from this category #}
         </div>
     </div>
-
-    <button class="btn btn-dark rounded-1" type="submit"><i class="fas fa-save"></i>&nbsp;&nbsp;Create</button>
-
-    {{ form_end(formView) }}
-    {# TODO Display products example from this category #}
 {% endblock %}
