--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,6 +1,7 @@
 body {
     min-height: 100vh;
     min-height: -webkit-fill-available;
+    background-color: #d3d3d3;
 }
 
 html {
@@ -51,7 +52,7 @@ main {
 .btn-toggle:hover,
 .btn-toggle:focus {
     color: rgba(0, 0, 0, .85);
-    background-color: #d2f4ea;
+    background-color: #d3d3d3;
 }
 
 .btn-toggle::before {
@@ -78,7 +79,7 @@ main {
 }
 .btn-toggle-nav a:hover,
 .btn-toggle-nav a:focus {
-    background-color: #d2f4ea;
+    background-color: #d3d3d3;
 }
 
 .scrollarea {
