Create template and form for categories in back office

--- a/templates/admin/sidebar/sidebar.html.twig
+++ b/templates/admin/sidebar/sidebar.html.twig
@@ -1,53 +1,56 @@
 <div class=" bg-white p-3">
     <ul class="list-unstyled ps-0">
         <li class="mb-1">
-            <button data-bs-toggle="collapse" data-bs-target="#home-collapse" aria-expanded="true" class="btn btn-toggle align-items-center rounded collapsed">
+            <button
+                    data-bs-toggle="collapse"
+                    data-bs-target="#edition-collapse"
+                    aria-expanded="{{ app.request.get('_route') starts with 'admin.product' or app.request.get('_route') starts with 'admin.category' ? 'true' : 'false' }}"
+                    class="btn btn-toggle align-items-center rounded {{ app.request.get('_route') starts with 'admin.product' or app.request.get('_route') starts with 'admin.category' ? '' : 'collapsed' }}">
                 Edition
             </button>
-            <div class="collapse show" id="home-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="#" class="link-dark rounded">Products</a></li>
-                    <li><a href="{{ path('admin_category_create') }}" class="link-dark rounded">Category</a></li>
+            <div class="collapse {{ app.request.get('_route') starts with 'admin.product' or app.request.get('_route') starts with 'admin.category' ? 'show' : '' }}" id="edition-collapse">
+                <ul class="btn-toggle-nav fw-normal pb-1 small mx-2">
+                    <li>
+                        <a href="{{ path('admin.product.list') }}" class="text-decoration-none {{ app.request.get('_route') == 'admin.product.list' ? 'fw-bold' : '' }}">
+                            Products
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path('admin.category.list') }}" class="text-decoration-none {{ app.request.get('_route') == 'admin.category.list' ? 'fw-bold' : '' }}">
+                            Categories
+                        </a>
+                    </li>
                 </ul>
             </div>
         </li>
         <li class="mb-1">
             <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
-                Dashboard
+                TODO
             </button>
             <div class="collapse" id="dashboard-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="#" class="link-dark rounded">Overview</a></li>
-                    <li><a href="#" class="link-dark rounded">Weekly</a></li>
-                    <li><a href="#" class="link-dark rounded">Monthly</a></li>
-                    <li><a href="#" class="link-dark rounded">Annually</a></li>
+                <ul class="btn-toggle-nav fw-normal pb-1 small mx-2">
+                    <li></li>
                 </ul>
             </div>
         </li>
         <li class="mb-1">
             <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#orders-collapse" aria-expanded="false">
-                Orders
+                TODO
             </button>
             <div class="collapse" id="orders-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="#" class="link-dark rounded">New</a></li>
-                    <li><a href="#" class="link-dark rounded">Processed</a></li>
-                    <li><a href="#" class="link-dark rounded">Shipped</a></li>
-                    <li><a href="#" class="link-dark rounded">Returned</a></li>
+                <ul class="btn-toggle-nav fw-normal pb-1 small mx-2">
+                    <li></li>
                 </ul>
             </div>
         </li>
         <li class="border-top my-3"></li>
         <li class="mb-1">
             <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#account-collapse" aria-expanded="false">
-                Account
+                TODO
             </button>
             <div class="collapse" id="account-collapse">
-                <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li><a href="#" class="link-dark rounded">New...</a></li>
-                    <li><a href="#" class="link-dark rounded">Profile</a></li>
-                    <li><a href="#" class="link-dark rounded">Settings</a></li>
-                    <li><a href="#" class="link-dark rounded">Sign out</a></li>
+                <ul class="btn-toggle-nav fw-normal pb-1 small mx-2">
+                    <li></li>
                 </ul>
             </div>
         </li>
