--- a/templates/front/product/view.html.twig
+++ b/templates/front/product/view.html.twig
@@ -22,8 +22,8 @@
     } %}
 
     {% include('front/product/product_card.html.twig') with {
-        'level' : 'large',
-        'title' : 'h1',
+        'level' : level,
+        'header' : header,
         'category' : true
         }
     %}
