--- a/templates/admin/category/form.html.twig
+++ b/templates/admin/category/form.html.twig
@@ -5,8 +5,8 @@
 
 {% block main %}
 
-    <h1>New Category</h1>
-
+    <h1>{% if category is defined %}{{ category.id }} - {{ category.name }}{% else %}New Category{% endif %}</h1>
+    <hr>
     {{ form_start(formView) }}
 
     {{ form_errors(formView) }}
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    <button class="btn btn-dark rounded-1" type="submit"><i class="fas fa-save"></i>&nbsp;&nbsp;Create</button>
+    <button class="btn btn-dark rounded-1" type="submit"><i class="fas fa-save"></i>&nbsp;&nbsp;Save</button>
 
     {{ form_end(formView) }}
     {# TODO Display products example from this category #}
