--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -4,6 +4,9 @@
 
 {% block main %}
     <div class="col-10">
+        <h1>Categories :</h1>
+        <hr>
+        <a href="{{ path('admin.category.create') }}" class="btn btn-info btn-sm rounded-3">+ Create</a>
         <table class="table table-hover table-sm">
             <thead>
                 <tr>
@@ -18,7 +21,7 @@
                 <tr class="table-{{ loop.index is odd ? 'info' : 'secondary' }}">
                     <th scope="row">{{ category.id }}</th>
                     <td>{{ category.name }}</td>
-                    <td><a href="{{ path('admin.category.update', {'id': category.id}) }}" type="button" class="btn btn-info btn-sm rounded-3"><i class="fa-solid fa-arrow-right"></i>&nbsp;Update</a></td>
+                    <td><a href="{{ path('admin.category.edit', {'id': category.id, 'slug': category.slug}) }}" type="button" class="btn btn-info btn-sm rounded-3"><i class="fa-solid fa-arrow-right"></i>&nbsp;Update</a></td>
                 </tr>
             {% endfor %}
             </tbody>
