--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -4,6 +4,14 @@
 
 {% block main %}
     <div class="col-10">
+        {% for type, messages in app.flashes %}
+            <div class="alert alert-{{ type }}">
+                {% for message in messages %}
+                    <p>{{ message }}</p>
+                {% endfor %}
+            </div>
+        {% endfor %}
+
         <h1>Categories :</h1>
         <hr>
         <a href="{{ path('admin.category.create') }}" class="btn btn-info btn-sm rounded-3">+ Create</a>
