--- a/templates/admin/product/index.html.twig
+++ b/templates/admin/product/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/layout.html.twig' %}
 
-{% block title %}Products list{% endblock %}
+{% block title %}Liste de produits{% endblock %}
 
 {% block main %}
 
@@ -13,15 +13,15 @@
             </div>
         {% endfor %}
 
-        <h1>Products:</h1>
+        <h1>Produits :</h1>
         <hr>
-        <a href="{{ path('admin.product.create') }}" class="btn btn-info btn-sm rounded-3">+ Create</a>
+        <a href="{{ path('admin.product.create') }}" class="btn btn-info btn-sm rounded-3">+ Créer</a>
         <table class="table table-hover table-sm">
             <thead>
             <tr>
                 <th scope="col">ID</th>
-                <th scope="col">Name</th>
-                <th scope="col">Category</th>
+                <th scope="col">Nom</th>
+                <th scope="col">Catégorie(s)</th>
                 <th scope="col">Action</th>
             </tr>
             </thead>
@@ -32,7 +32,7 @@
                     <th scope="row">{{ product.id }}</th>
                     <td>{{ product.name }}</td>
                     <td>{% for category in product.categories %}<a href="{{ path('admin.category.edit', {'id' : category.id, 'slug' : category.slug}) }}">{{ category.name }}</a>{% if not loop.last %}&nbsp;|&nbsp;{% endif %}{% endfor %}</td>
-                    <td><a href="{{ path('admin.product.edit', {'id': product.id, 'slug': product.slug}) }}" type="button" class="btn btn-info btn-sm rounded-3"><i class="fa-solid fa-arrow-right"></i>&nbsp;Update</a></td>
+                    <td><a href="{{ path('admin.product.edit', {'id': product.id, 'slug': product.slug}) }}" type="button" class="btn btn-info btn-sm rounded-3"><i class="fa-solid fa-arrow-right"></i>&nbsp;Mettre à jour</a></td>
                 </tr>
             {% endfor %}
             </tbody>
