--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -34,19 +34,19 @@
                 {% include 'front/footer/view.html.twig' with {
                     'title': 'About',
                     'icon': 'fas fa-info-circle',
-                    'text': 'Lorem ipsum dolor sit amet',
+                    'text': 'Nous contacter',
                     'textColor': 'text-white'
                 }%}
                 {% include 'front/footer/view.html.twig' with {
-                    'title': 'Indeed',
+                    'title': 'Garantie',
                     'icon': 'fas fa-check',
-                    'text': 'Lorem ipsum dolor sit amet',
+                    'text': 'Un service après vente 24/7',
                     'textColor': 'text-white'
                 }%}
                 {% include 'front/footer/view.html.twig' with {
                     'title': 'Safe',
                     'icon': 'fas fa-lock',
-                    'text': 'Lorem ipsum dolor sit amet',
+                    'text': 'Paiement sécurisé',
                     'textColor': 'text-white'
                 }%}
             </footer>
