--- a/templates/admin/category/form.html.twig
+++ b/templates/admin/category/form.html.twig
@@ -4,7 +4,7 @@
 {% block title %}New category{% endblock %}
 
 {% block main %}
-    <h1>{% if category is defined %}{{ category.id }} - {{ category.name }}{% else %}New Category{% endif %}</h1>
+    <h1>{% if category is defined %}{{ category.id }} - {{ category.name }}{% else %}Nouvelle catégorie{% endif %}</h1>
     <hr>
 
     {% for type, messages in app.flashes %}
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <button class="btn btn-dark rounded-1" type="submit"><i class="fas fa-save"></i>&nbsp;&nbsp;Save</button>
+    <button class="btn btn-dark rounded-1" type="submit"><i class="fas fa-save"></i>&nbsp;&nbsp;Enregistrer</button>
 
     {{ form_end(formView) }}
     {# TODO Display products example from this category #}
