--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/layout.html.twig' %}
 
-{% block title %}Categories list{% endblock %}
+{% block title %}Liste des catégories{% endblock %}
 
 {% block main %}
     <div class="col-10">
@@ -14,12 +14,12 @@
 
         <h1>Categories :</h1>
         <hr>
-        <a href="{{ path('admin.category.create') }}" class="btn btn-info btn-sm rounded-3">+ Create</a>
+        <a href="{{ path('admin.category.create') }}" class="btn btn-info btn-sm rounded-3">+ Créer</a>
         <table class="table table-hover table-sm">
             <thead>
                 <tr>
                     <th scope="col">ID</th>
-                    <th scope="col">Name</th>
+                    <th scope="col">Nom</th>
                     <th scope="col">Action</th>
                 </tr>
             </thead>
