add dynamic items and link to the navbar

--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -29,7 +29,7 @@
 
         {% block footer %}
 
-            <footer class="footer row mt-auto">
+            <footer class="footer row mt-auto pt-4">
                 {% include 'front/footer/view.html.twig' with {
                     'title': 'About',
                     'icon': 'fas fa-info-circle',
