--- a/templates/front/category/view.html.twig
+++ b/templates/front/category/view.html.twig
@@ -16,7 +16,7 @@
                 'active' : true,
             },
         },
-        'currentRoute' : 'category_view'
+        'currentRoute' : 'category.view'
     } %}
     <hr>
     <div class="row">
