--- a/templates/front/navbar/navbar.html.twig
+++ b/templates/front/navbar/navbar.html.twig
@@ -1,47 +1,44 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{ path('homepage') }}">E-CO-5.4</a>
+
+            <a class="navbar-brand mx-3" href="{{ navigation.homepage_link.url }}">{{ navigation.homepage_link.name }}</a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+
             <div class="collapse navbar-collapse" id="navbarColor02">
                 <ul class="navbar-nav me-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                        <div class="dropdown-menu" style="">
-                            <h6 class="dropdown-header">Tous les produits</h6>
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
-                        </div>
-                    </li>
+
+                    {# Menu déroulant catégories #}
+                    {% include 'nav/item-dropdown.html.twig' with {
+                        'main_title' : "Catégories",
+                        'header_title' : "Nos catégories phares",
+                        'header' : 'h6',
+                        'entities' : navigation.categories_link,
+                        'footer_url' : path('category.list'),
+                    }  %}
+                    {# Fin menu déroulant #}
+
+                    {% for navItem in navigation %}
+                        {% if navItem.type is defined and navItem.type == 'item' %}
+                            {% include 'nav/item.html.twig' with {
+                                'item' : navItem,
+                                'classItem' : 'nav-item',
+                                'classLink' : 'nav-link',
+                            } %}
+                        {% endif %}
+                    {% endfor %}
                 </ul>
+
+                {# Formulaire recherche produit #}
                 <form class="d-flex">
                     <input class="form-control me-sm-2" type="search" placeholder="Search">
                     <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
                 </form>
+                {# Fin recherche produit #}
+
             </div>
         </div>
     </nav>
